--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,6 +10,15 @@
     margin: auto;
 }
 
+@media screen and (max-width: 670px) {
+    .lead__title {
+        font-size: 60px;
+        max-width: 670px;
+        max-height: 128px;
+        line-height: 64px;
+    }
+}
+
 @media screen and (max-width: 576px) {
     .lead__title {
         max-width: 288px;
