--- a/blocks/photo-grid/__items/photo-grid__items.css
+++ b/blocks/photo-grid/__items/photo-grid__items.css
@@ -5,10 +5,10 @@
     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
     grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
     gap: 16px;
-    margin: 0;
+    margin: 0 auto 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
     .photo-grid__items {
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         grid-template-rows: repeat(auto-fit, minmax(225px, 1fr));
@@ -16,7 +16,7 @@
     }
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 990px){
     .photo-grid__items {
         grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
         grid-template-rows: repeat(auto-fit, minmax(264px, 1fr));
